@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 15:50:05 brook Exp $
+
+SHA1 (R/compositions_1.40-2.tar.gz) = 8fe5f70401f4a4daf44c649e210f5f9bd663c270
+RMD160 (R/compositions_1.40-2.tar.gz) = dff95b6b41104b17a9f50b9fbf6c9b3482e8b324
+SHA512 (R/compositions_1.40-2.tar.gz) = c5b39eb71dbfadae3a4dccb9f19309ccc3297be39a5ab1ce63e50317a64b0beb7e62d3e1edaf9cb2cf33b0cd00ef27fadb5c442d62eb24eaf04cc304265bec12
+Size (R/compositions_1.40-2.tar.gz) = 792954 bytes
