@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3328 2019/08/09 15:48:20 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3329 2019/08/09 15:50:05 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5452,3 +5452,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added math/R-DEoptimR version 1.0.8 [brook 2019-08-09]
 	Added math/R-tensorA version 0.36.1 [brook 2019-08-09]
 	Added math/R-robustbase version 0.93.5 [brook 2019-08-09]
+	Added math/R-compositions version 1.40.2 [brook 2019-08-09]
